--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
-  "name": "temp",
+  "name": "React-Plaid-Test",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.19.0",
+    "express": "^4.17.1",
+    "moment": "^2.24.0",
+    "nodemon": "^1.19.1",
+    "plaid": "^4.2.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-plaid-link": "^1.3.1",
     "react-scripts": "3.1.0"
   },
   "scripts": {
@@ -27,5 +33,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "http://localhost:4090"
 }
